--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,15 @@ img {
 header {
   /* Remove the <header> box and allow us to directly apply header’s children to the grid. */
   display: contents;
+  grid-area: header;
+}
+
+body {
+  margin: 0 auto;;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: auto 10em;
+  grid-template-areas:
+    "header header"
+    "left right";
 }
 
 .pano {
@@ -55,15 +61,14 @@ h2 {
   color: #30658d;
 }
 
-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+main{
+display: contents;
 }
 
-figure:first-child {
-  grid-column: 1;
+main:first-child {
+  grid-area: left;
 }
 
-figure:nth-child(2) {
-  grid-column: 2;
+main:nth-child(2) {
+  grid-area: right;
 }
