--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
   grid-template-areas:
     "header header"
     "left right";
+  gap: 1em;
 }
 
 .pano {
@@ -61,8 +62,8 @@ h2 {
   color: #30658d;
 }
 
-main{
-display: contents;
+main {
+  display: contents;
 }
 
 main:first-child {
