--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,14 @@ header {
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
   grid-template-areas:
     "header header"
     "left right";
-  gap: 1em;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .pano {
@@ -39,11 +41,11 @@ body {
   grid-column: 1;
   grid-row: 2;
   z-index: 1;
+  width: 50%;
+  align-self: baseline;
 }
 
 nav {
-  display: flex;
-  color: #fff;
   grid-column: 2 / -1;
   grid-row: 1;
 }
@@ -52,6 +54,13 @@ ul {
   text-decoration: underline;
   list-style-type: none;
   flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  font-size: 2em;
+}
+
+a {
+  color: #fff;
 }
 
 nav, h2 {
@@ -72,4 +81,8 @@ main:first-child {
 
 main:nth-child(2) {
   grid-area: right;
+}
+
+figure {
+  margin: 0;
 }
